# WriteTool

./: .gitignore  CMakeLists.txt  README.md  WriteTool.bat  cmake.bat  depends.bat
code/: CMakeLists.txt  Readme.md  main.cpp
code/Logic/: CMakeLists.txt
code/Logic/include/: BookGuideTable.h  BookTable.h  ComponentManager.h  ComponentXml.h  IComponent.h  ITable.h  LogicWrapper.h  MainApplication.h  TableComponent.h  logicLog.h
code/Logic/src/: BookGuideTable.cpp  BookTable.cpp  ComponentManager.cpp  ComponentXml.cpp  IComponent.cpp  ITable.cpp  LogicWrapper.cpp  MainApplication.cpp  TableComponent.cpp  logicLog.cpp
code/MApp/: Readme.md
code/MApp/form/: CreateBook.ui  HelpBook.ui  mainwindow.ui
code/MApp/include/: MApplication.h  MMainWidgets.h  MMainWindow.h  MTabBar.h  MTabWidget.h  MTableView.h  MWrapper.h
code/MApp/src/: MApplication.cpp  MMainWidgets.cpp  MMainWindow.cpp  MTabBar.cpp  MTabWidget.cpp  MTableView.cpp  MWrapper.cpp
code/config/: config.h.in
data/: menu.xml
